--- a/MissingNumberInArray.html
+++ b/MissingNumberInArray.html
@@ -9,3 +9,23 @@
         }       
       })
       console.log(arr(a)-1);
+//Find the missing element in an array
+// Math.min(), Math.max(), for, if, array.indexOf(i) < 0 , array.push()
+
+ const arrNum = [1,2,3,4,5,6,9,10,100];
+      const missArray = [];
+     
+      const missingValue = (arr) => {
+        const minValue = Math.min(...arr);
+        const maxValue = Math.max(...arr);
+
+        for (let i = minValue; i <= maxValue; i++) {
+           
+          if (arr.indexOf(i) < 0) {
+             missArray.push(i);
+          }
+        }
+        return missArray;
+      }
+   
+      console.log(missingValue(arrNum));
