--- a/oddEventFinder.html
+++ b/oddEventFinder.html
@@ -1,5 +1,5 @@
 //Find odd Event Finder
-//array.forEach, array.push , result = function();
+//array.forEach, array.push , result = function();, if else
 <script>
     //  How to find even or odd number in a given array in javascript
 
@@ -31,4 +31,19 @@
     // console.log(oddEvenFinder(a).even);
     // console.log(oddEvenFinder(a).odd);
     // console.log(oddEvenFinder(a).odd);   
+    </script>
+
+//Find odd and even numbers
+//array.filter
+  <script>
+      const numbers = [1,3,7,6,9,8,12];
+
+      const even = numbers.filter((value, index) => {
+        return value % 2 === 0;
+      })
+      const odd = numbers.filter((value,index) => {
+        return value % 2 ==! 0;
+      })
+      console.log(even);
+      console.log(odd);
     </script>
