--- a/findVowelsInString.html
+++ b/findVowelsInString.html
@@ -14,3 +14,17 @@
       })
       })
     </script>
+
+  <script>
+      // Find the vowels from the string
+      // if , || , prompt, alert
+     
+      const char = prompt('Enter one character');
+
+      if (char === 'a' || char === 'e' || char === 'i' ||char === 'o' ||char === 'u' ) {
+         alert(`${char} is vowel`)        
+      }
+      else {
+        alert(`${char} is not vowel`);
+      }
+    </script>
