--- a/findVowelsInString.html
+++ b/findVowelsInString.html
@@ -15,11 +15,11 @@
       })
     </script>
 
-  <script>
+ <script>
       // Find the vowels from the string
       // if , || , prompt, alert
      
-      const char = prompt('Enter one character');
+      const char = prompt('Enter one character').toLocaleLowerCase();
 
       if (char === 'a' || char === 'e' || char === 'i' ||char === 'o' ||char === 'u' ) {
          alert(`${char} is vowel`)        
