--- a/reverseString.html
+++ b/reverseString.html
@@ -1,4 +1,5 @@
-  // str.split(), for, arr.toString(), str.replace(), array.push() , array.length ;
+<script>
+// str.split(), for, arr.toString(), str.replace(), array.push() , array.length ;
     const string ="I am your puppet";
 
     function ReverseString(string) {
@@ -19,4 +20,28 @@
     console.log(reverseStr2);
     console.log(reverseStr3);
 
+  </script>
+<script>
+   // str.split(""), array.reverse() , array.join()
+
+   const reverseString = (str) => {
+     
+   const strToArray =str.split('');
+   const reverseArray = strToArray.reverse();
+   const reverseString = reverseArray.join("");
+   return reverseString;
+
+   }
+
+  const result1 = reverseString('I am vennila');
+  const result2 = reverseString('Just come');
+  const result3 = reverseString('Line I am');
+
+  console.log(result1);
+  console.log(result2);
+  console.log(result3);
+
+  
    
+
+  </script>
