--- a/regularExpressions/codingReg.html
+++ b/regularExpressions/codingReg.html
@@ -26,3 +26,14 @@
       checkFirstLetterCase("/ am ");
       checkFirstLetterCase("arai");
       checkFirstLetterCase("Lovy");
+
+<script>
+    //pattern.test()
+    //  2. Write a JavaScript program to check a credit card number. 
+
+    const creditCard = '4543 8908 7653 4554';
+
+    const pattern = /^(\d{4}\s?){4}$/;
+
+    console.log(pattern.test(creditCard));
+</script>
