--- a/regularExpressions/codingReg.html
+++ b/regularExpressions/codingReg.html
@@ -37,3 +37,25 @@
 
     console.log(pattern.test(creditCard));
 </script>
+
+<script>
+     //  2. Write a JavaScript program to check a credit card number. 
+    
+    // American Express :- Starting with 34 or 37, length 15 digits.
+    // Visa :- Starting with 4, length 13 or 16 digits.
+    // MasterCard :- Starting with 51 through 55, length 16 digits.
+    // Discover :- Starting with 6011, length 16 digits or starting with 5, length 15 digits.
+    // Diners Club :- Starting with 300 through 305, 36, or 38, length 14 digits.
+    // JCB :- Starting with 2131 or 1800, length 15 digits or starting with 35, length 16 digits.
+
+    let americanExpress = /^(3[47][0-9]{13})$/; 
+    let visa = /^4([0-9]{12})([0-9]{3})?$/; //(4[0-9]{12}(?:[0-9]{3})?)
+    let mastercard = /^5[1-5][0-9]{14}$/; //(5[1-5][0-9]{14})
+    let discover = /^(6011[0-9]{12})|(5[0-9]14)$/; //(6(?:011|5[0-9]{2})[0-9]{12}) 
+    let dinnersclub = /^3(0[0-5][0-9]{11})|(8[0-9]{12})$/; //(3(?:0[0-5]|[68][0-9])[0-9]{11})
+    let jcb = /^(2131[0-9]15)|(1800[0-9]15)|(35[0-9]{14})$/; //((?:2131|1800|35[0-9]{3})[0-9]{11}) 
+
+    let ourpatter = /^(3[47][0-9]{13})|(4([0-9]{12})([0-9]{3})?)|(5[1-5][0-9]{14})|(6011[0-9]{12})|(5[0-9]14)|(3(0[0-5][0-9]{11})|(8[0-9]{12}))|(2131[0-9]15)|(1800[0-9]15)|(35[0-9]{14})$/;
+
+
+</script>
