--- a/regularExpressions/codingReg.html
+++ b/regularExpressions/codingReg.html
@@ -59,3 +59,17 @@
 
 
 </script>
+
+<script>
+     //if start with 5 na length 5 start with 8 na length 6  
+     let string = '88976';
+     let email = 'aXjdfjIdkk87a%^*.DFSFDF@GMAIL.com';
+
+     const emailpattern = /^[/w+`~!@#\$%\^&\*\(\)-\+_\{\}\.?]+@\w\.\w{2,}/; ///^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/; 
+
+     const pattern = /^(5|8[0-9])[0-9]{4}$/;
+     console.log(pattern.test(string));
+
+
+
+</script>
