--- a/regularExpressions/codingReg.html
+++ b/regularExpressions/codingReg.html
@@ -73,3 +73,14 @@
 
 
 </script>
+
+<script>
+      //Find date from string 
+     let string = ' Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius autem ipsa cumque eos tempora doloremque error provident sint nulla! Accusamus nihil adipisci dolor ut 30-12-5655 commodi et, quae autem esse dicta?';    
+     
+     let datePattern = /([012][0-9]|3[0-1])-(0[0-9]|1[012])-\d{4}/g;
+     console.log(string.match(datePattern));
+
+     console.log(string);
+    
+</script>
