--- a/InASentenceEachWordReverse.html
+++ b/InASentenceEachWordReverse.html
@@ -17,4 +17,9 @@
     console.log(`%c ${ reverseEachString('string')} `,
 `background: hotpink; color: #fff; padding: 10px 20px;`
      );
+   const reverseTotalString = (string) => {
+     const array = string.split('').reverse().join('');
+   
+    return array;
+  }
  </script>
