--- a/NormalQuestions/whatisjs.html
+++ b/NormalQuestions/whatisjs.html
@@ -1,1 +1,4 @@
-hi
+1. javascript is a highlevel , interpreted programming language is used  to create webpages dynamically. 
+
+//highlevel - > Easy understand language // interpreted => without the need for compiling the source code into machine code before execution
+dynamically => particular action or decision is made at runtime rather than compile time
