--- a/NormalQuestions/ImplicitCoersion.html
+++ b/NormalQuestions/ImplicitCoersion.html
@@ -2,3 +2,7 @@
 
 Implicit type conversion is a javascript concept that refers to the automatic type conversion of one data type to another data type. This coersion
 follows the priority starting with strings , numbers and finally boolean.
+  let a = 10;
+      let b = '7';
+      console.log(a+b);//result 107// 10 is Implicit coercion to string
+      console.log(a - b);// result 3 // '7' is Implicit coercion to number
