--- a/challenges.html
+++ b/challenges.html
@@ -24,3 +24,15 @@
      const bugFix3 = (str) => str.replace(/bug/g, 'flower');
 
      console.log(bugFix3(str)); </script>
+
+2.    Replace  http to https
+      <script>
+      function http2https(url) {
+      
+        return url.replace('http', 'https');
+      }
+      console.log(http2https('http://jscodebox.com/'));
+
+      const http2httpsI = url => url.replace('http', 'https');
+      console.log(http2httpsI('httpp://jscodebox.com/'));</script>
+
