--- a/challenges.html
+++ b/challenges.html
@@ -70,5 +70,12 @@
        var sumProduct = (n1,n2) => n1 === n2 ? n1**2 : n1+n2;
     </script>
    
+5.  Two numbers are given a and b. Return true if one of the two numbers is 42 or the sum of the two numbers.
+     <script>
+    const is42 = (n1,n2) => n1 === 42 || n2 == 42 || n1+n2 === 42;
 
-
+    console.log(is42(21, 21));
+    console.log(is42(42, 21));
+    console.log(is42(42, 42));
+    console.log(is42(21, 1));
+    </script>
