--- a/ReverseDirection.html
+++ b/ReverseDirection.html
@@ -1,4 +1,4 @@
-Output:: 0 1 2 3 2 1 0
+1. Output:: 0 1 2 3 2 1 0
 
     const reset = () => {
      let i = 0;
@@ -28,3 +28,36 @@ Output:: 0 1 2 3 2 1 0
     }
     reset();
    
+2. output::
+
+           const reset = () => {
+    let i = 0;
+    let direction = true;
+    let limit = 3;
+
+    setInterval(() => {
+      if (direction) {
+      hi(i);
+      i++;      
+      if (i > limit) {
+        direction = false;
+        i--;
+      }
+    }
+    else {
+      i--;
+      hi(i);
+      if (i == 0) {direction = true; i++;};
+      
+    }
+    }, 2000);  
+
+   }
+
+   reset();
+
+   function hi(i) {
+
+    console.log(i);
+    
+   }
