--- a/challenges2.html
+++ b/challenges2.html
@@ -322,3 +322,47 @@ console.log(string);
       console.log('... object for uniqueness ...');
       console.log(keyboardErrorReduceEfficientObject('lollipop','dollicat'));
     </script>
+6. // A string url is given. Return the parameter values in an array. The keys can be ignored.
+      // https://jscodebox.com/test.xml?id=3&value=file&ji=978 => [3, 'file']
+
+<script>
+      
+      const getURLParams = (url) => {
+        const result = url.slice(url.indexOf("?"));
+        const pattern = /=\w+&?/g;
+        const array = result.match(pattern) === null ? [] :  result.match(pattern);
+        const r = array.map((val) => val.replace(/[&=]/g, ""));
+        return r;
+      };
+      console.log(
+        getURLParams("https://jscodebox.com/test.xml?id=3&value=file&ji=978")
+      );
+      console.log(
+        getURLParams('https://jscodebox.com/')
+      );
+      console.log(
+        getURLParams('https://jscodebox.com/index.php?kex=Jfs873nj&id=1&action=delete')
+
+      );
+      console.log(
+        getURLParams('https://jscodebox.com/delete.php?api_key=njkASF5')
+
+      );
+
+      console.log(
+        getURLParams('https://jscodebox.com/?action=new&user_id=3&force=false')
+      );
+
+     const getURLParamsI = (url) => {
+      const searchParams = new URL(url).searchParams.values();
+      const array = [];     
+      for (const element of searchParams){
+         array.push(element);
+     }
+     return array;
+    }
+      console.log(
+        getURLParamsI('https://jscodebox.com/?action=new&user_id=3&force=false')
+      );
+
+    </script>
